style.css
/* ... */
.contact-form div{
    display: flex;
    flex-direction: column;
    padding-bottom: 50px;
}

.contact-form div label{
    color: var(--secondary);
    font-weight: bold;
    letter-spacing: 2px;
    font-size: 1.15rem;
    padding-bottom: 8px;
    /* line-height: 30px; */

}

.contact-form div input, textarea{
    border: none;
    border-radius: 5px;
    height: 30px;
    padding: 0px 20px;
    font-size: 1.01rem;
    background-color: var(--background-odd);
    color: var(--background);
}

textarea{
    height: 70px;
}

.contact-form input[type="submit"]{
    width: fit-content;
    padding: 10px 70px;
    border: none;
    background-color: var(--secondary);
    color: var(--background);
    border-radius: 8px;
}

/* Media Queries */
@media screen and (max-width: 1600px) {
    
    /* Navigation Bar */
    .nav-list >  li{
        font-size: 1rem;
    }
    
    .nav-list > a > li > h3{
        font-size: 1rem;
    }

    .nav-list > a > .call{
        font-size: 1rem;
        padding: 2px 16px;
    }

    .header-content{
        padding-top: 20px;
        grid-template-columns: 2fr 1fr;
        grid-gap: 20px;
    }

    .intro{
        padding-top: 0px;
        padding-bottom: 0px;
        grid-area: intro;
    }

    .social-links{
        top: 35%;
        right: 5px;
        transform: scale(0.7);
    }

    /* Skills Section Looks good at this breakpoint*/

    /* Wide card */
    .wide-card{
        top: -3.5%;
        left: 20%;
        right: 20%;
    }

   /* Projects */
   .card-wrapper .card{
    transform: scale(0.96);
    margin-bottom: 50px; 
    transition-property: transform;
    transition: 0.3s;
    }

    .card-wrapper .card:hover{
        transform: scale(1.01);
    }

    .card-wrapper{
        padding: 0px;
        justify-content: space-around;
    }


}


/* Media Queries */
@media screen and (max-width: 1200px) {
    
    /* Wide card */
    .wide-card{
        top: -2%;
        left: 20%;
        right: 20%;
        padding: 10px 20px;
    }

    .left i {
        font-size: 2.5rem;
    }
    .left div h2 {
        font-size: 1.3rem;
    }

    .wide-card .btn{
        padding: 2px 15px;
    }

    .btn i{
        font-size: 1.1rem;
    }
    .btn h3{
        font-weight: 500;
        font-size: 1.1rem;
    }

    /* Projects */
    .card-wrapper .card{
        transform: scale(1.05);
        margin-bottom: 50px; 
        transition-property: transform;
        transition: 0.3s;
    }

    .card-wrapper .card:hover{
        transform: scale(1.1);
    }

    .card-wrapper{
        padding: 0px;
        justify-content: space-around;
    }

}

/* 1300 window size and 1024 screes */
@media screen and (max-width: 1300px) {
    
    /* Navigation Bar */
    .nav-list >  li{
        font-size: 0.9rem;
    }
    
    .nav-list > a > li > h3{
        font-size: 0.9rem;
    }

    .nav-list > a > .call{
        font-size: 0.9rem;
        padding: 2px 16px;
    }
    
    .header-content{
        
        grid-template-columns: 2fr 1fr;
        
    }

    .intro .welcome{
        margin: 30px 0px;
    }

    .intro h1{
        font-size: 3rem;
    }

    .intro p{
        font-size: 1.06rem;
    }

    .tittle-left, .tittle-right{
        font-size: 1.3rem;
    }
    .subtittle-left, .subtittle-right{
        font-size: 1.1rem;
    }

    .skills-wrapper{
        grid-gap: 15px;
        /* grid-template-columns: 1fr 3fr; */
    }

    .experience .year{
        font-size: 0.95rem;
    }

    .experience .experience-description h1{
        padding-top: 3px;
        font-size: 1rem;
    }

    /* Wide card */
    .wide-card .left i{
        font-size: 2rem;
    }

    .wide-card .left div h2{
        font-size: 1.1rem;
    }

    .wide-card .btn{
        font-size: 1rem;
    }

    /* Going to add a JS even listener */
    .filter-menu ul{
        display: none;
        /* flex-wrap: wrap; */
    }
    .filter-menu i{
        display: block;
    }

}

/* Samsung Galaxy A51/71 */
@media screen and (max-width: 420px) {
    
    :root{
        --site-width: 90%;
    }

    .header-wrapper{
        
        grid-template-areas:
        
        "header-content";
        grid-gap: 0px;
        padding-bottom: 50px;
    }

    .social-links{
        display: none;
    }

    .fa-bars{
        color: var(--secondary);
    }

    nav{
        box-shadow: 1px 5px 10px rgba(0,0,0,0.2);
        padding: 10px 25px;
        margin-top: 0px;
        top: 0;
        left: 0;
        right: 0;
        position: fixed;
        background-color: var(--background);
        z-index: 20;
    }

    .header-content{
        padding-top: 70px;
        grid-template-rows: 1fr 1fr;
        grid-template-columns: 1fr;
        grid-template-areas: 
        "intro" 
        "picture";
        /* align-content: center; */
        /* grid-template-rows: 1fr 1fr; */
    }

    .nav-wrapper{
        display: none;
    }

    .head-center{
        position: relative;
    }

    .tittle-left, .subtittle-left, .tittle-right, .subtittle-right{
        line-height: 30px;
        letter-spacing: 1px;
    }
    
    .picture{
        background-position: center;
        /* border: 1px solid #1C3342; */
        margin-top: 50px;
    }

    .intro h1{
        font-size: 2.4rem;
        letter-spacing: 2px;
        text-align: center;
    }

    .intro p{
        letter-spacing: 1px;
        text-align: center;
    }
    .intro .buttons{
        text-align: center;
    }

    .skills-wrapper{
        grid-template-areas:
        "skills-tittles"
        "skills-list" 
        "experiences";

        grid-gap: 70px;
    }

    .experiences{
    }
    .skills-wrapper .skills-tittles{
        margin-bottom: 0px;
    }

    .contact-wrapper{
        grid-template-columns: 1fr;
    }



}


/* 

320px
480px
600px
768px
900px
1024px
1200px

*/

